# IDesign

./: .gitignore  IDesign.py  README.md  agents.py  corrector_agents.py  generate_scene.py  place_in_blender.py  pyproject.toml  refiner_agents.py  rerender_missing.py  retrieve.py  run_from_csv.py  run_multiworker.py  utils.py
scripts/: run_parallel.sh
