[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "idesign"
version = "0.1.0"
description = "Personalized LLM Interior Designer"
readme = "README.md"
requires-python = "==3.10.*"

dependencies = [
    # Core agent framework
    "ag2>=0.7.0",

    # Data processing
    "networkx>=2.6.3",
    "jsonschema>=4.3.2",
    "matplotlib",
    "opencv-python>=4.8.1.78",
    "pydantic>=1.10.2,<2.0",
    "numpy<2",
]

[project.optional-dependencies]
# For 3D asset retrieval (retrieve.py)
# Note: Also requires DGL - install separately: pip install dgl -f https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html
retrieval = [
    "torch>=2.4.0,<2.5.0",
    "transformers>=4.35.0,<4.47.0",
    "huggingface_hub",
    "objaverse",
    "einops",
    "torch_redstone",
    "scipy",
    "accelerate>=0.26.0",
]

dev = [
    "pytest",
]

# Note: DGL requires manual installation from special index:
# pip install dgl -f https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html

[tool.setuptools]
py-modules = []
